product section added

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -96,6 +96,13 @@ nav {
     background-position: center;
     background-repeat: no-repeat;
 }
+#products{
+    position: relative;
+    background-image: url('images/server2.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
 
 .overlay {
     position: absolute;
